Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37628

vcxproj is missing a language tag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.4.0
    • 5.2.0 Beta1
    • Build System
    • Windows 8.1 Runtime
    • WinRT
    • f5b53c8e3ececbdac1a7da56cbdc850e542316b9

    Description

      When building an appx package in Visual Studio, the following warning is printed:

      Warning 4 warning APPX1901: The DefaultLanguage property is either missing from the project file or does not have a value. The fallback language is set to the Visual Studio language: en-IE.

      Where "en-IE" is your current locale.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes