add missing DefaultLanguage property for WinRT projects

Task-number: QTBUG-37628
Change-Id: I7cce0641b8958fe1d97ace21cb5392e32a067649
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>

cregit: f5b53c8e3ececbdac1a7da56cbdc850e542316b9 https://github.com/qt/qtbase/commit/f5b53c8e3ececbdac1a7da56cbdc850e542316b9